--- a/dev.md.html
+++ b/dev.md.html
@@ -641,6 +641,15 @@ Visual Studio Code
 ## plugin
 - vscodevim
 
+## keymap
+Key                  | Description
+---------------------|---
+C-b                  | toggle sidebar
+C-S-e                | explorer
+C-S-```              | new terminal
+C-PageDown           | next editor
+C-PageUp             | prev editor
+
 <meta name="keywords" content="*memo_visual_studio*">
 <meta name="keywords" content="*memo_vs*">
 Visual Studio
