--- a/dev.md.html
+++ b/dev.md.html
@@ -439,19 +439,19 @@ p                | プレビュー
 <meta name="keywords" content="*memo_vim.plugin*">
 <meta name="keywords" content="*memo_vim.vim-plug*">
 ## vim-plug
-Command          | Description
------------------|---
-:PlugInstall     | install plugins
-:PlugUpdate      | update plugins
+  | Command          | Description
+--|------------------|---
+  | :PlugInstall     | install plugins
+  | :PlugUpdate      | update plugins
 
 <meta name="keywords" content="*memo_vim.fugitive*">
 ## fugitive
-Command          | Description
------------------|---
--                | toggle stage / unstage
-X                | discard the change
-D                | diff
-R                | reload the status buffer
+  | Command          | Description
+--|------------------|---
+  | -                | toggle stage / unstage
+  | X                | discard the change
+  | D                | diff
+  | R                | reload the status buffer
 
 ### git add --patch
 - :Gdiff
@@ -462,26 +462,34 @@ R                | reload the status buffer
 
 <meta name="keywords" content="*memo_vim.gv*">
 ## gv
-Command          | Description
------------------|---
-O                | diff in a new tab
-D                | diff in a new tab
-C-X              | :tabclose
+  | Command          | Description
+--|------------------|---
+  | O                | diff in a new tab
+* | D                | diff in a new tab
+* | C-X              | :tabclose
+
+<meta name="keywords" content="*memo_vim.agit*">
+## agit
+  | Command          | Description
+--|------------------|---
+* | D                | diff in a new tab
+* | C-X              | :tabclose
 
 <meta name="keywords" content="*memo_vim.nerdtree*">
 ## nerdtree
-Command          | Description
------------------|---
-I                | toggle dot files
-cd               | change dir
-r                | refresh the current dir
-R                | refresh the current root
-m                | menu
+  | Command          | Description
+--|------------------|---
+  | I                | toggle dot files
+  | cd               | change dir
+  | r                | refresh the current dir
+  | R                | refresh the current root
+  | m                | menu
 
 ## nerd commenter
-Command          | Description
------------------|---
-<Leader>c<Space> | toggle comment
+  | Command          | Description
+--|------------------|---
+  | <Leader>c<Space> | toggle comment
+* | C                | toggle comment
 
 <meta name="keywords" content="*memo_vim.ultisnips*">
 ## UltiSnips
