--- a/dev.md.html
+++ b/dev.md.html
@@ -222,6 +222,9 @@ $ vim -u NONE
 <meta name="keywords" content="*memo_vim.nmap*">
 ### normal mode keymap
 
+- o: remap
+- !: fixed
+
   | Key     | Original                | Map      | New
 --|---------|-------------------------|----------|---
 o | C-A     | add                     |          | make a hyper link in the markdown format
@@ -238,7 +241,7 @@ o | C-K     | not used                | C-W k    | window up
   | C-L     | redraw screen           | C-W l    | window right
   | C-M     | CR
 o | C-N     | j                       |          | redraw screen
-o | C-O     | prev in jump list       |          | open the current file in chrome
+o | C-O     | prev in jump list
 o | C-P     | k                       |          | open an URL in the markdown format by chrome
   | C-Q     | terminal control
  !| C-R     | redo
