--- a/links.md.html
+++ b/links.md.html
@@ -214,7 +214,7 @@ Programming
 - [stdman](https://github.com/jeaye/stdman)
 - [cpp-pocketref](https://github.com/cpp-pocketref/sample-code)
 - [C++11 - Wikipedia](https://ja.wikipedia.org/wiki/C%2B%2B11)
-- [C++11, C++14 新機能まとめ ～使いそうなものだけ](https://qiita.com/leon-joel/items/81415c1ef355c6246280)
+- [C++11, C++14, C++17 新機能まとめ ～使いそうなものだけ](https://qiita.com/leon-joel/items/81415c1ef355c6246280)
 - [C++11スマートポインタ入門](https://qiita.com/hmito/items/db3b14917120b285112f)
 
 ## Library
