--- a/soft.md.html
+++ b/soft.md.html
@@ -84,7 +84,7 @@ FreeCAD
 
 ## Mesh Design
 
-<meta name="keywords" content="*memo_blender*">
+<meta name="keywords" content="*memo_soft.blender*">
 Blender
 =======================================================
 ## 回転中心を指定
