--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <a href="dev.md.html"    id="toc_item" target="main">Dev</a>
 <a href="vcs.md.html"    id="toc_item" target="main">VCS</a>
 <a href="prog.md.html"   id="toc_item" target="main">Prog</a>
+<a href="cg.md.html"     id="toc_item" target="main">Cg</a>
 <a href="soft.md.html"   id="toc_item" target="main">Soft</a>
 <a href="stock.md.html"  id="toc_item" target="main">Stock</a>
 <a href="links.md.html"  id="toc_item" target="main">Links</a>
