update memo tag names

--- a/dev.md.html
+++ b/dev.md.html
@@ -5,12 +5,12 @@
 <meta name="keywords" content="*memo_dev*">
 **Develop**
 
-<meta name="keywords" content="*memo_autohotkey*">
-<meta name="keywords" content="*memo_ahk*">
+<meta name="keywords" content="*memo_dev.autohotkey*">
+<meta name="keywords" content="*memo_dev.ahk*">
 AutoHotKey
 =======================================================
 
-<meta name="keywords" content="*memo_hhk*">
+<meta name="keywords" content="*memo_dev.hhk*">
 ## HHK 60 Key
 
 *****************************************************************
@@ -37,7 +37,7 @@ mintty   | RShift          | Hankaku/Zenkaku Esc
 mintty   | Del             | right half window
 mintty   | Ins             | maximize window
 
-<meta name="keywords" content="*memo_keymap*">
+<meta name="keywords" content="*memo_dev.keymap*">
 My Keymap
 =======================================================
 <div id="col2">
@@ -101,16 +101,15 @@ vim.win    | C-H             | window left
            | C-E             | expand the current window
            | C-X             | delete the current window
            | C-N             | redraw screen
-vim.open   | C-A             | make a hyper link in the markdown format
+vim.open   | C-O             | make a hyper link in the markdown format
            | C-P             | open an URL in the markdown format by chrome
-           | C-O             | open the current file in chrome
 vim.hl     | C-U             | quickhl
            | C-Y             | quickhl reset
 vim.move   | C-F             | page down
            | C-D             | page up
            | Space           | page down
            | BS              | page up
-           | C-G             | easymotion
+           | C-A             | easymotion
 
 Binaries
 =======================================================
@@ -128,7 +127,7 @@ python3 | o 3.7.3  |          | i 3.7.3  |         |
 - i: installed
 - o: use
 
-<meta name="keywords" content="*memo_colors*">
+<meta name="keywords" content="*memo_dev.colors*">
 Settings 256 colors for vim, tmux, mintty
 =======================================================
 ## .tmux.conf
@@ -147,11 +146,11 @@ set t_Co=256
 $ tmux -2
 ~~~
 
-<meta name="keywords" content="*memo_tmux*">
+<meta name="keywords" content="*memo_dev.tmux*">
 tmux
 =======================================================
 
-<meta name="keywords" content="*memo_tmux.keymap*">
+<meta name="keywords" content="*memo_dev.tmux.keymap*">
 ## tmux keymap
 Mode | Command         | Description
 -----|-----------------|---
@@ -569,7 +568,7 @@ Termuxで使用するときの注意
 
 - 辞書のエンコーディングをEUC-JPからUTF-8に変換が必要
 
-<meta name="keywords" content="*memo_skk*">
+<meta name="keywords" content="*memo_dev.skk*">
 skk
 =======================================================
 
@@ -609,21 +608,21 @@ UgoKu
 SPACE
 ~~~
 
-<meta name="keywords" content="*memo_ctags*">
+<meta name="keywords" content="*memo_dev.ctags*">
 ctags
 =======================================================
 ~~~
 $ ctags -f out_tag_file -R dir
 ~~~
 
-<meta name="keywords" content="*memo_gtags*">
+<meta name="keywords" content="*memo_dev.gtags*">
 gtags
 =======================================================
 ~~~
 $ gtags -v
 ~~~
 
-<meta name="keywords" content="*memo_global*">
+<meta name="keywords" content="*memo_dev.global*">
 global
 =======================================================
 ~~~
@@ -633,11 +632,11 @@ $ global -r func   # list reference files
 $ global -f files  # list functions
 ~~~
 
-<meta name="keywords" content="*memo_w3m*">
+<meta name="keywords" content="*memo_dev.w3m*">
 w3m
 =======================================================
 
-<meta name="keywords" content="*memo_w3m.keymap*">
+<meta name="keywords" content="*memo_dev.w3m.keymap*">
 ## w3m keymap
   | Command              | Description
 --|----------------------|---
@@ -658,7 +657,7 @@ P | C-p                  | prev history
 P | H                    | help
 P | Q                    | quit
 
-<meta name="keywords" content="*memo_vscode*">
+<meta name="keywords" content="*memo_dev.vscode*">
 Visual Studio Code
 =======================================================
 ## plugin
@@ -673,8 +672,8 @@ C-S-```              | new terminal
 C-PageDown           | next editor
 C-PageUp             | prev editor
 
-<meta name="keywords" content="*memo_visual_studio*">
-<meta name="keywords" content="*memo_vs*">
+<meta name="keywords" content="*memo_dev.visual_studio*">
+<meta name="keywords" content="*memo_dev.vs*">
 Visual Studio
 =======================================================
 ## plugin
@@ -684,7 +683,7 @@ Visual Studio
 ## tab
 - Tool > Options > Text Editor > C/C++ > Tab
 
-<meta name="keywords" content="*memo_android_studio*">
+<meta name="keywords" content="*memo_dev.android_studio*">
 Android Studio
 =======================================================
 ## plugin
@@ -701,13 +700,13 @@ gradlew installDebug
 gradlew uninstallDebug
 ~~~
 
-<meta name="keywords" content="*memo_android*">
+<meta name="keywords" content="*memo_dev.android*">
 Android
 =======================================================
 ## デバイスの設定
 - 設定 > 開発者向けオプション > USBデバッグをONにする
 
-<meta name="keywords" content="*memo_adb*">
+<meta name="keywords" content="*memo_dev.adb*">
 ## adb
 - https://developer.android.com/studio/command-line/adb?hl=ja
 
