--- a/os.md.html
+++ b/os.md.html
@@ -5,8 +5,8 @@
 **OS**
 
 <meta name="keywords" content="*memo_os*">
-<meta name="keywords" content="*memo_windows*">
-<meta name="keywords" content="*memo_windows10*">
+<meta name="keywords" content="*memo_os.windows*">
+<meta name="keywords" content="*memo_os.windows10*">
 Windows
 =======================================================
 
@@ -101,8 +101,8 @@ Skype
 ~~~
 -->
 
-<meta name="keywords" content="*memo_chocolatey*">
-<meta name="keywords" content="*memo_choco*">
+<meta name="keywords" content="*memo_os.chocolatey*">
+<meta name="keywords" content="*memo_os.choco*">
 ## Chocolatey
 
 ~~~
@@ -149,8 +149,8 @@ Windows + Tab          | タスクビューを開く
 Windows + Ctrl + Left  | 左の仮想デスクトップへ移動
 Windows + Ctrl + Right | 右の仮想デスクトップへ移動
 
-<meta name="keywords" content="*memo_dos*">
-<meta name="keywords" content="*memo_bat*">
+<meta name="keywords" content="*memo_os.dos*">
+<meta name="keywords" content="*memo_os.bat*">
 DOSコマンド
 =======================================================
 ## UNIX - DOS コマンド対応表
@@ -248,14 +248,14 @@ if "%str%" == "A" (
 )
 ~~~
 
-<meta name="keywords" content="*memo_msys*">
-<meta name="keywords" content="*memo_msys2*">
+<meta name="keywords" content="*memo_os.msys*">
+<meta name="keywords" content="*memo_os.msys2*">
 MSYS2
 =======================================================
 - http://www.msys2.org/
 - https://wiki.archlinux.org/index.php/pacman
 
-<meta name="keywords" content="*memo_pacman*">
+<meta name="keywords" content="*memo_os.pacman*">
 
 ## /etc/pacman.conf
 ~~~
@@ -339,7 +339,7 @@ MSYS2_ARG_CONV_EXCL="*"
 /usr/bin/git clone https://github.com/jeaye/stdman.git
 ~~~
 
-<meta name="keywords" content="*memo_cygwin*">
+<meta name="keywords" content="*memo_os.cygwin*">
 Cygwin
 =======================================================
 ## Installed
@@ -370,7 +370,7 @@ UTF8, DOS形式
 cygpath -am `pwd`
 ~~~
 
-<meta name="keywords" content="*memo_bootcamp*">
+<meta name="keywords" content="*memo_os.bootcamp*">
 BootCamp
 =======================================================
 ## Shortcut
@@ -381,7 +381,7 @@ option長押し           | OSの選択 [起動時]
 Alt + Shift + Fn + F11 | 選択されたウィンドウのキャプチャ
 
 
-<meta name="keywords" content="*memo_linux*">
+<meta name="keywords" content="*memo_os.linux*">
 Linux
 =======================================================
 ## Shortcut [X Window]
@@ -400,7 +400,7 @@ SysRq + s           | sync
 SysRq + u           | unmount
 SysRq + b           | reboot
 
-<meta name="keywords" content="*memo_mac*">
+<meta name="keywords" content="*memo_os.mac*">
 Mac
 =======================================================
 ## Shortcut
@@ -412,7 +412,7 @@ Shift + クリック| ファイル連続選択
 Cmd + クリック  | ファイル個別選択
 Cmd + delete    | ファイル削除
 
-<meta name="keywords" content="*memo_termux*">
+<meta name="keywords" content="*memo_os.termux*">
 Termux
 =======================================================
 - https://termux.com/
@@ -505,7 +505,7 @@ termux$ ip -4 a
 pc$ ssh -p 8022 192.168.XXX.XXX
 ~~~
 
-<meta name="keywords" content="*memo_misc*">
+<meta name="keywords" content="*memo_os.misc*">
 misc
 =======================================================
 ## NTP Server
