--- a/prog.md.html
+++ b/prog.md.html
@@ -6,7 +6,7 @@
 
 <meta name="keywords" content="*memo_prog*">
 
-<meta name="keywords" content="*memo_make*">
+<meta name="keywords" content="*memo_prog.make*">
 Makefile
 =======================================================
 ## if
@@ -32,7 +32,7 @@ tags:
 	ctags -R .
 ~~~
 
-<meta name="keywords" content="*memo_cmake*">
+<meta name="keywords" content="*memo_prog.cmake*">
 CMakeLists.txt
 =======================================================
 ## 環境変数
@@ -61,8 +61,8 @@ add_custom_command(TARGET sample POST_BUILD
   )
 ~~~
 
-<meta name="keywords" content="*memo_ref.c*">
-<meta name="keywords" content="*memo_ref.cpp*">
+<meta name="keywords" content="*memo_prog.c*">
+<meta name="keywords" content="*memo_prog.cpp*">
 C++
 =======================================================
 
@@ -270,11 +270,11 @@ template<class For, class For2, class BinPred>
 For search(For first, For last, For2 first2, For2 last2, BinPred p);
 ~~~
 
-<meta name="keywords" content="*memo_python*">
+<meta name="keywords" content="*memo_prog.python*">
 Python
 =======================================================
 
-<meta name="keywords" content="*memo_pip*">
+<meta name="keywords" content="*memo_prog.pip*">
 ~~~
 pip -V                       # show version
 pip list
@@ -290,8 +290,8 @@ python -m pip install --upgrade pip  # upgrade pip
 pip install opencv-python
 ~~~
 
-<meta name="keywords" content="*memo_anaconda*">
-<meta name="keywords" content="*memo_conda*">
+<meta name="keywords" content="*memo_prog.anaconda*">
+<meta name="keywords" content="*memo_prog.conda*">
 Anaconda
 =======================================================
 
@@ -311,11 +311,11 @@ conda install scikit-image
 #conda install -c conda-forge opencv
 ~~~
 
-<meta name="keywords" content="*memo_numpy*">
+<meta name="keywords" content="*memo_prog.numpy*">
 Numpy
 =======================================================
 
-<meta name="keywords" content="*memo_pytorch*">
+<meta name="keywords" content="*memo_prog.pytorch*">
 Pytorch
 =======================================================
 
@@ -325,7 +325,7 @@ conda install pytorch-cpu -c pytorch
 pip install torchvision
 ~~~
 
-<meta name="keywords" content="*memo_tensorflow*">
+<meta name="keywords" content="*memo_prog.tensorflow*">
 Tensorflow
 =======================================================
 
