--- a/soft.md.html
+++ b/soft.md.html
@@ -6,14 +6,14 @@
 
 <meta name="keywords" content="*memo_soft*">
 
-<meta name="keywords" content="*memo_word*">
+<meta name="keywords" content="*memo_soft.word*">
 Word
 =======================================================
 ## 図、表の説明文の入れ方
 テキストボックスを作成し、図、表をテキストボックス内にドラッグ・ドロップする。
 
-<meta name="keywords" content="*memo_imagemagick*">
-<meta name="keywords" content="*memo_convert*">
+<meta name="keywords" content="*memo_soft.imagemagick*">
+<meta name="keywords" content="*memo_soft.convert*">
 ImageMagick
 =======================================================
 ## resize
@@ -62,13 +62,13 @@ convert +append image1 image2 image3 output_image
 convert rgb.jpg ( alpha.png -colorspace gray -alpha off ) -compose copy-opacity -composite rgba.png
 ~~~
 
-<meta name="keywords" content="*memo_gimp*">
+<meta name="keywords" content="*memo_soft.gimp*">
 Gimp
 =======================================================
 ## 市松模様(checker)を作る
 [フィルター] -> [下塗り] -> [パターン] -> [市松模様]
 
-<meta name="keywords" content="*memo_freecad*">
+<meta name="keywords" content="*memo_soft.freecad*">
 FreeCAD
 =======================================================
 ## Part Design
