--- a/cg.md.html
+++ b/cg.md.html
@@ -2,16 +2,17 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="default.css">
 
+<meta name="keywords" content="*memo_cg*">
 **CG**
 
 - [Column-major, Row-major](https://qiita.com/suzuryo3893/items/9e543cdf8bc64dc7002a)
 - [Unity matrix](http://edom18.hateblo.jp/entry/2019/01/04/153205)
 
-<meta name="keywords" content="*memo_glsl*">
+<meta name="keywords" content="*memo_cg.glsl*">
 GLSL
 =======================================================
 
-<meta name="keywords" content="*memo_opengl*">
+<meta name="keywords" content="*memo_cg.opengl*">
 OpenGL
 =======================================================
 - Right-handed coordinate system
@@ -36,7 +37,7 @@ T =
     0 0 0 1
 ~~~
 
-<meta name="keywords" content="*memo_unity*">
+<meta name="keywords" content="*memo_cg.unity*">
 Unity
 =======================================================
 - Left-handed coordinate system
@@ -63,7 +64,7 @@ MeshLab
 
 ![meshlab](images/model_meshlab.jpg)
 
-<meta name="keywords" content="*memo_blender*">
+<meta name="keywords" content="*memo_cg.blender*">
 Blender
 =======================================================
 - Right-handed coordinate system
@@ -72,7 +73,7 @@ Blender
 - Z-up
 ![blender](images/model_blender.jpg)
 
-<meta name="keywords" content="*memo_eigen*">
+<meta name="keywords" content="*memo_cg.eigen*">
 Eigen
 =======================================================
 - Column order memory
@@ -97,7 +98,7 @@ typedef Matrix<float, 3, 1> Vector3f;
 typedef Matrix<float, 1, 3> RowVector3f;
 ~~~
 
-<meta name="keywords" content="*memo_glm*">
+<meta name="keywords" content="*memo_cg.glm*">
 glm
 =======================================================
 ~~~
@@ -115,7 +116,7 @@ glm::mat4 proj = glm::ortho<float>(0, w, 0, h);
 (0, 0) (w, h) -> (-1, -1) (1, 1)
 ~~~
 
-<meta name="keywords" content="*memo_opencv*">
+<meta name="keywords" content="*memo_cg.opencv*">
 OpenCV
 =======================================================
 ## Type
@@ -124,7 +125,7 @@ OpenCV
 CV_8UC1  | 8bit unsigned 1 channel
 CV_32FC2 | 32bit float 2 channel
 
-<meta name="keywords" content="*memo_imgui*">
+<meta name="keywords" content="*memo_cg.imgui*">
 imgui
 =======================================================
 ## demo
