--- a/os.md.html
+++ b/os.md.html
@@ -180,8 +180,8 @@ file | mklink dstfile srcfile  | del dstfile
 
 ## ミラーリング (管理者権限で実行)
 ~~~
-robocopy C:¥srcdir D:¥dstdir /mir /sl
-robocopy srcdir D:¥dstdir /mir /sl
+robocopy C:\srcdir D:\dstdir /mir /sl
+robocopy srcdir D:\dstdir /mir /sl
 robocopy /?
 ~~~
 
