--- a/links.md.html
+++ b/links.md.html
@@ -218,6 +218,9 @@ Programming
 - [C++11スマートポインタ入門](https://qiita.com/hmito/items/db3b14917120b285112f)
 
 ## Library
+- [Learn OpenGL](https://learnopengl.com/)
+- [OpenGL 4](https://www.khronos.org/registry/OpenGL-Refpages/gl4/)
+- [OpenGL ES 3.0](https://www.khronos.org/registry/OpenGL-Refpages/es3.0/)
 - [glm](https://glm.g-truc.net/)
   | [doc](https://glm.g-truc.net/0.9.8/api/modules.html)
   | [1](https://qiita.com/usagi/items/f34976a3d3011506ff7d)
