--- a/os.md.html
+++ b/os.md.html
@@ -309,6 +309,9 @@ pacman -S mingw-w64-x86_64-python2-pip
 pacman -S mingw-w64-x86_64-imagemagick
 pacman -S mingw-w64-x86_64-gnuplot
 pacman -S mingw-w64-x86_64-graphviz
+
+pacman -S mingw-w64-x86_64-qpdf
+pacman -S mingw-w64-x86_64-ghostscript
 ~~~
 
 ## Not installed
