update for termux

--- a/os.md.html
+++ b/os.md.html
@@ -422,12 +422,6 @@ Termux
 - [The Termux Wiki](https://wiki.termux.com/wiki/Main_Page)
 - Hacker's Keyboard
 
-## apt
-~~~
-apt update
-apt upgrade
-~~~
-
 ## pkg [recommended]
 ~~~
 pkg help
@@ -450,14 +444,19 @@ pkg install termux-exec
 
 ## Installed
 ~~~
-pkg install git ctags clang cmake tmux
-pkg install diffutils
-pkg install python
-pkg install vim-python
+pkg install git
+pkg install vim
+pkg install tmux
 pkg install ncurses-utils   # tput
 pkg install util-linux      # column
-pkg install openssh
 pkg install iconv
+pkg install ctags
+pkg install diffutils
+pkg install clang
+pkg install cmake
+pkg install python
+pkg install vim-python
+pkg install openssh
 ~~~
 
 ## sshd
