--- a/prog.md.html
+++ b/prog.md.html
@@ -274,6 +274,7 @@ For search(For first, For last, For2 first2, For2 last2, BinPred p);
 Python
 =======================================================
 
+## pip
 <meta name="keywords" content="*memo_prog.pip*">
 ~~~
 pip -V                       # show version
@@ -290,6 +291,12 @@ python -m pip install --upgrade pip  # upgrade pip
 pip install opencv-python
 ~~~
 
+## script
+~~~
+#!/usr/bin/env python
+# -*- coding: utf-8 -*-
+~~~
+
 <meta name="keywords" content="*memo_prog.anaconda*">
 <meta name="keywords" content="*memo_prog.conda*">
 Anaconda
@@ -297,6 +304,7 @@ Anaconda
 
 Command                    | Description
 ---------------------------|---
+conda info                 | print info
 conda list                 | list packages
 conda update -n base conda | update conda
 conda update --all         | update all packages
