--- a/prog.md.html
+++ b/prog.md.html
@@ -295,6 +295,14 @@ pip install opencv-python
 ~~~
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
+
+import sys
+
+def main():
+    print("Hello world.")
+
+if __name__ == "__main__":
+    main()
 ~~~
 
 <meta name="keywords" content="*memo_prog.anaconda*">
